# NB_Polar_Encoder_decoder_Mex

./: .gitignore  CMakeLists.txt  NBPolarDecoder_mex.mexa64  NBPolarEncode_mex.mexa64  README.md  c_cpp.txt  results.txt  results_CSK_Bin_N64_GF64_K42_9x18.txt
PruningTool/: CMakeLists.txt  HelperFuncPruningTool.h  PruningToolMain.cpp  PruningToolMain.oldddd
PruningTool/data/N1024/ContributionMatrices/: bubbles_N1024_K42_GF64_SNR-20.000_14x28_Cs_norm_mat.txt  bubbles_N1024_K43_GF64_SNR-19.500_14x28_Cs_norm_mat.txt  bubbles_N1024_K43_GF64_SNR-20.000_14x28_Cs_norm_mat.txt  bubbles_N1024_K43_GF64_SNR-20.500_14x28_Cs_norm_mat.txt  bubbles_N1024_K43_GF64_SNR-21.000_14x28_Cs_norm_mat.txt  bubbles_N1024_K43_GF64_SNR-21.500_14x28_Cs_norm_mat.txt  bubbles_N1024_K43_GF64_SNR-22.000_14x28_Cs_norm_mat.txt  bubbles_N1024_K512_GF64_SNR-10.000_14x28_Cs_norm_mat.txt  bubbles_N1024_K512_GF64_SNR-10.500_14x28_Cs_norm_mat.txt  bubbles_N1024_K512_GF64_SNR-9.500_14x28_Cs_norm_mat.txt  bubbles_N1024_K819_GF64_SNR-7.000_14x28_Cs_norm_mat.txt  bubbles_N1024_K922_GF64_SNR-5.500_14x28_Cs_norm_mat.txt  bubbles_N1024_K922_GF64_SNR-6.000_14x28_Cs_norm_mat.txt  bubbles_N1024_K922_GF64_SNR-6.500_14x28_Cs_norm_mat.txt
PruningTool/data/N128/ContributionMatrices/: bubbles_N128_K112_GF256_SNR-10.000_36x36_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-12.000_36x36_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-12.500_20x30_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-12.500_36x36_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-13.000_20x30_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-13.000_36x36_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-13.500_18x36_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-13.500_36x36_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-13.500_36x72_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-14.000_10x20_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-14.000_18x36_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-14.000_36x36_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-14.000_36x72_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-14.500_18x36_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-14.500_36x36_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-14.500_72x36_Cs_norm_mat.txt  bubbles_N128_K112_GF256_SNR-15.000_36x36_Cs_norm_mat.txt  bubbles_N128_K64_GF256_SNR-17.000_36x36_Cs_norm_mat.txt  bubbles_N128_K96_GF256_SNR-15.500_72x36_Cs_norm_mat.txt
include/: Decoder_functions.h  HelperFunc.h  channel.h  init.h  (+2 more)
(+2425 files in other folders)
